--- a/predictor_simulation.html
+++ b/predictor_simulation.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Joyland Adventure Predictor Simulator</title>
+  <link rel="stylesheet" href="predictpt_simulation.js</script>
+</head>
 <body>
   <div class="header">
     <div class="dropdown-left">
@@ -28,7 +35,7 @@
   <div class="title">Joyland Adventure Predictor Simulator</div>
 
   <div class="gif-container">
-    <img id="predictionGif" src="uncertain.gif" alt="Prediction GIFign:center; margin: 20px auto; font-weight:bold; font-size:1.2em;">
+    <img id="predictionGif" src="unclass="meter-box" style="text-align:center; margin: 20px auto; font-weight:bold; font-size:1.2em;">
     Total Meters Traveled: <span id="totalMeters">0</span>
   </div>
 
@@ -86,3 +93,4 @@
     <button onclick="importData()">Import Data</button>
   </div>
 </body>
+</html>
