--- a/predictor_simulation.html
+++ b/predictor_simulation.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Joyland Adventure Predictor Simulator</title>
-  <link rel="stylesheet" href="predictpt_simulation.js</script>
-</head>
+  predictor_style.css
+  <script src="predictor_script_simulation</head>
 <body>
+  <!-- Header with dropdowns and delete button -->
   <div class="header">
     <div class="dropdown-left">
       Risk Level:
@@ -32,13 +33,17 @@
     </div>
   </div>
 
+  <!-- Title -->
   <div class="title">Joyland Adventure Predictor Simulator</div>
 
+  <!-- GIF -->
   <div class="gif-container">
-    <img id="predictionGif" src="unclass="meter-box" style="text-align:center; margin: 20px auto; font-weight:bold; font-size:1.2em;">
+    <img id="predictionGif" src="uncotal meters box -->
+  <div class="meter-box" style="text-align:center; margin: 20px auto; font-weight:bold; font-size:1.2em; border: 2px solid #3a7bd5; padding: 10px; width: fit-content;">
     Total Meters Traveled: <span id="totalMeters">0</span>
   </div>
 
+  <!-- Encounter input line -->
   <div class="input-line">
     <label for="encounterType">Encounter:</label>
     <select id="encounterType">
@@ -59,17 +64,20 @@
     <input id="amount" type="number" placeholder="Amount" style="display:none; width:80px;">
   </div>
 
+  <!-- Buttons -->
   <div class="button-line">
     simulator.htmlBack</button>
     <button onclick="recordEncounter()">Record</button>
   </div>
 
+  <!-- JC/GC totals -->
   <div class="summary" style="text-align:center; margin-top:10px;">
     <div id="totalJC">Total JC Acquired: 0</div>
     <div id="totalGC">Total GC Acquired: 0</div>
     <div id="totalCombined">Total JC + GC: 0</div>
   </div>
 
+  <!-- Prediction summary -->
   <div class="summary">
     <div id="patternInfo"></div>
     <div id="nextSymbol"></div>
@@ -78,6 +86,7 @@
     <div id="gcPower"></div>
   </div>
 
+  <!-- Summary toggle -->
   <div style="text-align:center; margin-top:20px;">
     <input type="checkbox" id="showSummary">
     <label for="showSummary" style="display:inline-block; max-width:300px; line-height:1.2;">
@@ -86,6 +95,7 @@
     </label>
   </div>
 
+  <!-- Import/export section -->
   <div id="summarySection" style="display:none; text-align:center;">
     <div id="summaryOutput" style="margin:10px 0;"></div>
     <button onclick="exportData()">Export Data</button>
