--- a/predictor_simulation.html
+++ b/predictor_simulation.html
@@ -121,7 +121,7 @@
   </div>
 
   <div class="button-line">
-    simulator.htmlBack</button>
+    <button id="Back" style="display:none" onclick="location.href='simulator.html'">Back</button>
     <button onclick="recordEncounter()">Record</button>
   </div>
 
