--- a/simulator.html
+++ b/simulator.html
@@ -13,15 +13,12 @@
     <h2>Joyland Adventure Predictor - Simulation Setup</h2>
     <div class="table-wrapper">
       <table>
-        <tr><td>1. Risk Level:</td><td>
-          <td>
-  1. Risk level:
-  <span title="This input determinens how you wish to behave during the event:
+        <tr><td>1. Risk Level:
+        <span title="This input determinens how you wish to behave during the event:
     are you more of a risk taker (HR)
     someone who wishes to just test the waters (MR)
     or someone who wishes to get the most consistant experience while taking advantage of statistics (LR)
-    These are giving more (HR=1.6,MR=1.3,LR=1) weighs in the prediction calculation to the statistically advantage you have and take that way more risk">[?]</span>
-</td>
+    These are giving more (HR=1.6,MR=1.3,LR=1) weighs in the prediction calculation to the statistically advantage you have and take that way more risk">[?]</span></td><td>
           <select id="risk">
             <option value="">Choose 1</option>
             <option value="LR">Low Risk</option>
@@ -29,15 +26,12 @@
             <option value="HR">High Risk</option>
           </select>
         </td></tr>
-        <tr><td>2. Priority:</td><td>
-          <td>
-  2. Priority:
-  <span title="During the event, you have many choices to make and depending your lifestyle it can be that you might not care that much about Gold (max JC), or someone who wishes to just get the best value deals, but spend the least amount of starting gold (max GC), or want to just barely make the m's (m priority), it doesnt matter, just choose your preference and it will be adjusted:
+        <tr><td>2. Priority:
+          <span title="During the event, you have many choices to make and depending your lifestyle it can be that you might not care that much about Gold (max JC), or someone who wishes to just get the best value deals, but spend the least amount of starting gold (max GC), or want to just barely make the m's (m priority), it doesnt matter, just choose your preference and it will be adjusted:
     Gold priority = minimum amount of JC for the daily deals (84k JC), aiming for the most reasonable m, but the overflow that comes from just the m traveled, will be converted back to gold
     Joyland coin priority = minimum amount of GC to reach the most reasonable goal (300-360-900m), aiming for the most reasonable gold get, but the overflow that comes from just the m traveled, will be converted into JC
     300-360-900m priority = The difference between Joyland coin priority and m priority is that the overflow will be evenly divided between gold and joyland coin, above the minimums for both.">[?]</span>
-</td>
-          <select id="priority">
+          <select id="priority"></td><td>
             <option value="">Choose 1</option>
             <option value="Gold">Gold priority</option>
             <option value="Joyland">Joyland coin priority</option>
@@ -46,11 +40,8 @@
             <option value="900m">900m priority</option>
           </select>
         </td></tr>
-        <tr><td>3. Boss Fight Ranking:</td><td><input type="number" id="bossRank"></td></tr>
-        <td>
-  3. Boss Fight Ranking:
-  <span title="Your current boss fight ranking.">[?]</span>
-</td>
+        <tr><td>3. Boss Fight Ranking:
+        <span title="Your current boss fight ranking.">[?]</span></td><td><input type="number" id="bossRank"></td></tr>
         <tr><td>4. Arena Ranking:</td><td><input type="number" id="arenaRank"></td></tr>
         <tr><td>5. Boss Fight Damage:</td><td><input type="number" id="bossDmg"></td></tr>
         <tr><td>6. Lifetime Privilege:</td><td><input type="checkbox" id="privilege"></td></tr>
