--- a/simulator.html
+++ b/simulator.html
@@ -31,7 +31,7 @@
     Gold priority = minimum amount of JC for the daily deals (84k JC), aiming for the most reasonable m, but the overflow that comes from just the m traveled, will be converted back to gold
     Joyland coin priority = minimum amount of GC to reach the most reasonable goal (300-360-900m), aiming for the most reasonable gold get, but the overflow that comes from just the m traveled, will be converted into JC
     300-360-900m priority = The difference between Joyland coin priority and m priority is that the overflow will be evenly divided between gold and joyland coin, above the minimums for both.">[?]</span>
-          <select id="priority"></td><td>
+          <select id="priority">
             <option value="">Choose 1</option>
             <option value="Gold">Gold priority</option>
             <option value="Joyland">Joyland coin priority</option>
