--- a/simulator.html
+++ b/simulator.html
@@ -30,7 +30,7 @@
           <span title="During the event, you have many choices to make and depending your lifestyle it can be that you might not care that much about Gold (max JC), or someone who wishes to just get the best value deals, but spend the least amount of starting gold (max GC), or want to just barely make the m's (m priority), it doesnt matter, just choose your preference and it will be adjusted:
     Gold priority = minimum amount of JC for the daily deals (84k JC), aiming for the most reasonable m, but the overflow that comes from just the m traveled, will be converted back to gold
     Joyland coin priority = minimum amount of GC to reach the most reasonable goal (300-360-900m), aiming for the most reasonable gold get, but the overflow that comes from just the m traveled, will be converted into JC
-    300-360-900m priority = The difference between Joyland coin priority and m priority is that the overflow will be evenly divided between gold and joyland coin, above the minimums for both.">[?]</span>
+    300-360-900m priority = The difference between Joyland coin priority and m priority is that the overflow will be evenly divided between gold and joyland coin, above the minimums for both.">[?]</span></td><td>
           <select id="priority">
             <option value="">Choose 1</option>
             <option value="Gold">Gold priority</option>
