--- a/simulator.html
+++ b/simulator.html
@@ -44,12 +44,9 @@
         <span title="Your current boss fight ranking.">[?]</span></td><td><input type="number" id="bossRank"></td></tr>
         <tr><td>4. Arena Ranking:</td><td><input type="number" id="arenaRank"></td></tr>
         <tr><td>5. Boss Fight Damage:</td><td><input type="number" id="bossDmg"></td></tr>
-        <tr><td>6. Lifetime Privilege:</td><td><input type="checkbox" id="privilege"></td></tr>
+        <tr><td>6. Lifetime Privilege:
+         <span title="Check this if you have the lifetime privilege active.">[?]</span></td><td><input type="checkbox" id="privilege"></td></tr>
         <tr>
-  <td>
-    6. Lifetime Privilege:
-    <span title="Check this if you have the lifetime privilege active.">[?]</span>
-  </td>
   <td>
     <input type="checkbox" id="lifetimePrivilege" onclick="toggleLifetimeInput()" />
   </td>
