--- a/simulator.html
+++ b/simulator.html
@@ -47,27 +47,23 @@
         <tr><td>5. Boss Fight chest amount:
             <span title="Write down the amount (1-175) on how much boss fight chest you get per fight">[?]</span></td><td><input type="number" id="bossDmg"></td></tr>
         <tr><td>6. Lifetime Privilege:
-         <span title="Check this if you have the lifetime privilege active.">[?]</span></td><td><input type="checkbox" id="privilege"></td></tr>
-        <tr>
- <td>
-    <input type="checkbox" id="lifetimePrivilege"> Enable
-    <br>
-    <label for="magicKeyAmount" style="display:none;">Magic Key Amount:</label>
-    <input type="number" id="magicKeyAmount" style="display:none;">
-  </td>
-</tr>
+         <span title="Check this if you have the lifetime privilege active.">[?]</span></td><td><input type="checkbox" id="privilege"> Enable
+          <div id="magicKeyContainer" style="display:none;">
+      <label for="magicKeyAmount">Magic Key Amount:</label>
+      <input type="number" id="magicKeyAmount">
+    </div></td></tr>
 
 <tr>
   <td>
     7. Gold Mining?
     <span title="Check this if you plan to mine gold during the event.">[?]</span>
   </td>
- <td>
+  <td>
     <input type="checkbox" id="goldMining"> Enable
-    <br>
-    <label for="compassAmount" style="display:none;">Compass Amount:</label>
-    <input type="number" id="compassAmount" style="display:none;">
-  </td>
+    <div id="compassContainer" style="display:none;">
+      <label for="compassAmount">Compass Amount:</label>
+      <input type="number" id="compassAmount">
+    </div></td>
 </tr>
         <tr><td>8. Merchant Haggling:
             <span title="Write down the average amount of gold you get from the guild merchant feature (if you dont get any gold, write 0)">[?]</span></td><td><input type="number" id="merchant"></td></tr>
@@ -82,3 +78,26 @@
 </body>
 </html>
 
+
+
+<tr>
+  <td>6. Lifetime Privilege:</td>
+  <td>
+    <input type="checkbox" id="lifetimePrivilege"> Enable
+    <div id="magicKeyContainer" style="display:none;">
+      <label for="magicKeyAmount">Magic Key Amount:</label>
+      <input type="number" id="magicKeyAmount">
+    </div>
+  </td>
+</tr>
+
+<tr>
+  <td>7. Gold Mining?</td>
+  <td>
+    <input type="checkbox" id="goldMining"> Enable
+    <div id="compassContainer" style="display:none;">
+      <label for="compassAmount">Compass Amount:</label>
+      <input type="number" id="compassAmount">
+    </div>
+  </td>
+</tr>
