--- a/simulator.html
+++ b/simulator.html
@@ -48,10 +48,10 @@
             <span title="Write down the amount (1-175) on how much boss fight chest you get per fight">[?]</span></td><td><input type="number" id="bossDmg"></td></tr>
         <tr><td>6. Lifetime Privilege:
          <span title="Check this if you have the lifetime privilege active.">[?]</span></td><td><input type="checkbox" id="privilege"> Enable
-          <div id="magicKeyContainer" style="display:none;">
-      <label for="magicKeyAmount">Magic Key Amount:</label>
+           <br>
+          <span id="magicKeyContainer" style="display:none;">Magic Key amount:</span>
       <input type="number" id="magicKeyAmount">
-    </div></td></tr>
+         </td></tr>
 
 <tr>
   <td>
@@ -60,10 +60,10 @@
   </td>
   <td>
     <input type="checkbox" id="goldMining"> Enable
-    <div id="compassContainer" style="display:none;">
-      <label for="compassAmount">Compass Amount:</label>
+    <br>
+    <span id="compassContainer" style="display:none;">Compass Amount:</span>
       <input type="number" id="compassAmount">
-    </div></td>
+    </td>
 </tr>
         <tr><td>8. Merchant Haggling:
             <span title="Write down the average amount of gold you get from the guild merchant feature (if you dont get any gold, write 0)">[?]</span></td><td><input type="number" id="merchant"></td></tr>
