--- a/simulator.html
+++ b/simulator.html
@@ -48,9 +48,10 @@
             <span title="Write down the amount (1-175) on how much boss fight chest you get per fight">[?]</span></td><td><input type="number" id="bossDmg"></td></tr>
         <tr><td>6. Lifetime Privilege:
          <span title="Check this if you have the lifetime privilege active.">[?]</span></td><td><input type="checkbox" id="privilege"> Enable
-           <br>
-          <span id="magicKeyContainer" style="display:none;">Magic Key amount:</span>
+         <div id="magicKeyContainer" style="display:none;">
+      <label for="magicKeyAmount">Magic Key Amount:</label>
       <input type="number" id="magicKeyAmount">
+    </div>
          </td></tr>
 
 <tr>
@@ -77,3 +78,26 @@
   </div>
 </body>
 </html>
+
+
+<tr>
+  <td>6. Privilege:</td>
+  <td>
+    <input type="checkbox" id="privilege"> Enable
+    <div id="magicKeyContainer" style="display:none;">
+      <label for="magicKeyAmount">Magic Key Amount:</label>
+      <input type="number" id="magicKeyAmount">
+    </div>
+  </td>
+</tr>
+
+<tr>
+  <td>7. Gold Mining?</td>
+  <td>
+    <input type="checkbox" id="goldMining"> Enable
+    <div id="compassContainer" style="display:none;">
+      <label for="compassAmount">Compass Amount:</label>
+      <input type="number" id="compassAmount">
+    </div>
+  </td>
+</tr>
