--- a/simulator.html
+++ b/simulator.html
@@ -48,10 +48,9 @@
             <span title="Write down the amount (1-175) on how much boss fight chest you get per fight">[?]</span></td><td><input type="number" id="bossDmg"></td></tr>
         <tr><td>6. Lifetime Privilege:
          <span title="Check this if you have the lifetime privilege active.">[?]</span></td><td><input type="checkbox" id="privilege"> Enable
-         <div id="magicKeyContainer" style="display:none;">
+           <br>
       <label for="magicKeyAmount">Magic Key Amount:</label>
       <input type="number" id="magicKeyAmount">
-    </div>
          </td></tr>
 
 <tr>
@@ -62,7 +61,7 @@
   <td>
     <input type="checkbox" id="goldMining"> Enable
     <br>
-    <span id="compassContainer" style="display:none;">Compass Amount:</span>
+    <label for="compassAmount" id="compassLabel" style ="display:none;">Compass Amount:</label>
       <input type="number" id="compassAmount">
     </td>
 </tr>
