--- a/simulator.html
+++ b/simulator.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,6 +6,20 @@
   <title>Joyland Adventure Predictor - Simulation Setup</title>
   <link rel="stylesheet" href="style.css">
   <script src="script.js" defer></script>
+ 
+  <style>
+    /* Highlight the [?] tooltips on hover */
+    span[title] {
+      font-weight: normal;
+      text-decoration: none;
+      transition: all 0.2s ease-in-out;
+    }
+ 
+    span[title]:hover {
+      font-weight: bold;
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
   <div class="container">
@@ -15,10 +28,10 @@
       <table>
         <tr><td>1. Risk Level:
         <span title="This input determinens how you wish to behave during the event:
-    are you more of a risk taker (HR)
-    someone who wishes to just test the waters (MR)
-    or someone who wishes to get the most consistant experience while taking advantage of statistics (LR)
-    These are giving more (HR=1.6,MR=1.3,LR=1) weighs in the prediction calculation to the statistically advantage you have and take that way more risk">[?]</span></td><td>
+   are you more of a risk taker (HR)
+   someone who wishes to just test the waters (MR)
+   or someone who wishes to get the most consistant experience while taking advantage of statistics (LR)
+   These are giving more (HR=1.6,MR=1.3,LR=1) weighs in the prediction calculation to the statistically advantage you have and take that way more risk">[?]</span></td><td>
           <select id="risk">
             <option value="">Choose 1</option>
             <option value="LR">Low Risk</option>
@@ -28,9 +41,9 @@
         </td></tr>
         <tr><td>2. Priority:
           <span title="During the event, you have many choices to make and depending your lifestyle it can be that you might not care that much about Gold (max JC), or someone who wishes to just get the best value deals, but spend the least amount of starting gold (max GC), or want to just barely make the m's (m priority), it doesnt matter, just choose your preference and it will be adjusted:
-    Gold priority = minimum amount of JC for the daily deals (84k JC), aiming for the most reasonable m, but the overflow that comes from just the m traveled, will be converted back to gold
-    Joyland coin priority = minimum amount of GC to reach the most reasonable goal (300-360-900m), aiming for the most reasonable gold get, but the overflow that comes from just the m traveled, will be converted into JC
-    300-360-900m priority = The difference between Joyland coin priority and m priority is that the overflow will be evenly divided between gold and joyland coin, above the minimums for both.">[?]</span></td><td>
+   Gold priority = minimum amount of JC for the daily deals (84k JC), aiming for the most reasonable m, but the overflow that comes from just the m traveled, will be converted back to gold
+   Joyland coin priority = minimum amount of GC to reach the most reasonable goal (300-360-900m), aiming for the most reasonable gold get, but the overflow that comes from just the m traveled, will be converted into JC
+   300-360-900m priority = The difference between Joyland coin priority and m priority is that the overflow will be evenly divided between gold and joyland coin, above the minimums for both.">[?]</span></td><td>
           <select id="priority">
             <option value="">Choose 1</option>
             <option value="Gold">Gold priority</option>
@@ -52,7 +65,7 @@
       <label for="magicKeyAmount">Magic Key Amount:</label>
       <input type="number" id="magicKeyAmount">
          </td></tr>
-
+ 
 <tr>
   <td>
     7. Gold Mining?
@@ -77,4 +90,3 @@
   </div>
 </body>
 </html>
-
