--- a/predictor_simulation.html
+++ b/predictor_simulation.html
@@ -93,7 +93,7 @@
   <div class="title">Joyland Adventure Predictor Simulator</div>
 
   <div class="gif-container">
-    uncertain.gif
+    <img id="predictionGif" src="uncertain.gif" alt="Prediction" style="width: 200px; height: 200px;">
   </div>
 
   <div class="meter-box">
