--- a/predictor_simulation.html
+++ b/predictor_simulation.html
@@ -131,7 +131,7 @@
 
   <div class="button-line">
     <button id="Back" onclick="location.href='simulator.html'">Back</button>
-    <button id="recordBtn">Record</button
+    <button id="recordBtn">Record</button>
   </div>
 
   <div class="summary">
